<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SaveRecodingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="15">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageButton
                android:visibility="visible"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imBtnEditNoiseDetail"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edit_icon_white"
                />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:background="@drawable/boder_white"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="vertical"
                android:background="@drawable/boder_white"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:id="@+id/labelNoiseName"
                    android:textColor="@color/white"
                    android:text="@string/noise_name_label"
                    android:background="@drawable/boder_white"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:id="@+id/labelNoiseValue"
                    android:textColor="@color/white"
                    android:text="@string/noise_value"
                    android:background="@drawable/boder_white"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:id="@+id/labelMeasurementTime"
                    android:textColor="@color/white"
                    android:text="@string/noise_measurement_time"
                    android:background="@drawable/boder_white"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:id="@+id/labelCurrentTime"
                    android:textColor="@color/white"
                    android:text="@string/noise_current_time"
                    android:background="@drawable/boder_white"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/boder_white"
                android:orientation="vertical"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:id="@+id/editTextNoiseName"
                    android:textColor="@color/white"
                    android:hint="Type to here"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/boder_white"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:id="@+id/textViewNoiseValue"
                    android:textColor="@color/white"
                    android:background="@drawable/boder_white"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:id="@+id/textViewMeasurementTime"
                    android:textColor="@color/white"
                    android:background="@drawable/boder_white"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:id="@+id/textViewCurrentTime"
                    android:textColor="@color/white"
                    android:background="@drawable/boder_white"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="7"
            >

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:text="Save"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                android:background="@drawable/boder_white_with_radius"
                />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:text="Cancel"
                android:textColor="@color/white"
                android:backgroundTint="@color/gray"
                android:background="@drawable/boder_white_with_radius"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>